# stm32f3discovery_freertos_rust

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config
src/: FreeRTOSConfig.h  main.rs
